--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# Ignore bundler config
+/.bundle
+
+# Ignore the build directory
+/build
+/.tmp
+
+# Ignore cache
+/.sass-cache
+/.cache
+
+# Ignore .DS_store file
 .DS_Store
+
+# Don't commit node_modules
+/node_modules
