--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.5.0",
-    "webpack": "^1.12.14"
+    "page": "^1.7.1",
+    "webpack": "^1.12.14",
+    "xhr": "^2.2.0"
   },
   "dependencies": {
     "animateplus": "^1.3.2"
