--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "babel-preset-es2015": "^6.18.0",
     "webpack": "^1.13.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "fontfaceobserver": "^2.0.5"
+  },
   "scripts": {
     "dev": "./node_modules/webpack/bin/webpack.js --watch -d",
     "build": "NODE_ENV=production ./node_modules/webpack/bin/webpack.js -p"
